force-app/main/default/objects/Plan_Component__c.object
<CustomObject>
    <description>Represents a grouping of attributes or benefits of a plan family. These components are used to build plan templates</description>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Base_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Base Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Component_Code__c</fullName>
        <externalId>true</externalId>
        <label>Plan Component Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <label>Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Plan Components</relationshipLabel>
        <relationshipName>Plan_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Component_Desc__c</fullName>
        <label>Component Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workspace</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Component_Desc__c</columns>
        <columns>Product_Component_Type__c</columns>
        <columns>Is_Base_Component__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>