force-app/main/default/objects/Plan_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Component_Desc__c</columns>
    <columns>Product_Component_Type__c</columns>
    <columns>Is_Base_Component__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>